# dns_from_scratch

./: Cargo.toml  failed_test.txt
src/: lib.rs  main.rs
src/dns/: answer.rs  dns.rs  header.rs  label.rs  mod.rs  question.rs  question_type.rs
src/initialization/: init.rs  mod.rs
src/parse/: parse.rs
tests/server/: helpers.rs  main.rs  simple.rs  test_answer_label_fail_1.rs  test_answer_label_fail_2.rs  test_answer_label_fail_3.rs  test_encode_decode_message.rs  test_encode_decode_message_with_question.rs  test_forwarding.rs  test_parse_request_with_questions.rs  test_reply.rs  test_request_parse.rs  test_request_parse_header.rs
