[package]
name = "dns"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
bytes = "1.9.0"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "dns_server"

[dev-dependencies]
quickcheck = "1.0.3"
